--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body{
     max-height: 100%;
     background-image: url(imgs/home_Image.jpg);
     background-position: center;
-    background-size: 100%;
+    background-size: cover;
 }
 
 .bg-dark{
@@ -32,8 +32,12 @@ body{
 }
 
 .logo{
-    height: 4.5vw;
-    width: 8vw;
+    height: 4vw;
+    width: 4vw;
+    margin-right: 8px;
+    padding: 3px;
+    border-radius: 25%;
+    border: 2px solid rgb(93, 129, 250);
 }
 
 .footer{
