--- a/index.css
+++ b/index.css
@@ -5,7 +5,10 @@ body{
     font-family: Poppins,sans-serif;
     font-size: 16px;
     color: #ffffff;
+    background-color: rgba(0, 0, 0, 0.4) !important;
 }
+
+
 
 .vertical_boxes{
     display: grid;
@@ -14,6 +17,7 @@ body{
     background-image: url(imgs/home_Image.jpg);
     background-position: center;
     background-size: cover;
+    align-items: stretch;
 }
 
 .bg-dark{
@@ -23,12 +27,21 @@ body{
 
 .navbar{
     padding: 20px 50px !important;
+    margin-top: 8px;
+}
+
+a.navbar-brand{
+    font-size: 40px !important;
 }
 
 .navbar-dark 
 .navbar-nav
 .nav-link{
-    color: rgb(253, 251, 227);
+    color: rgb(248, 248, 248);
+}
+
+.navbar-nav{
+    float: right !important;
 }
 
 .logo{
@@ -37,20 +50,70 @@ body{
     margin-right: 8px;
     padding: 3px;
     border-radius: 25%;
-    border: 2px solid rgb(93, 129, 250);
+    border: 2px solid rgb(6, 63, 250);
 }
+
+.content{
+    display: grid;
+    flex-wrap: wrap;
+    position: relative;
+    margin: auto;
+   align-items: center;
+    text-align: center !important;
+}
+
+.content h1{
+    font-weight: bold;
+    font-size: 58px;
+}
+
 
 .footer{
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content: space-between;
-    align-items: flex-end;
-    padding: 8px 20px;
+    align-items:flex-end;
+    padding: 13px 20px;
     margin-right:5px;
-    padding: 20px;
     padding-right: 50px;
+    align-items: flex-end;
+    height: auto;
 }
 
 .footer ul{
     list-style:none;
+    display: flex;
+    margin: 0;
 }
+
+.languages p{
+     margin: 0; 
+}
+.languages a{
+    text-decoration: none;
+}
+
+.languages ul{
+    display: flex;
+}
+
+.languages li{
+    padding-left: 20px;
+}
+
+.Social_Media li{
+   padding:0 10px;
+}
+.Social_Media a{
+  text-decoration: none;
+  color: white;
+  padding:0 10px;
+}
+
+.Social_Media a:hover {
+    transition-property: transform;
+    transform: translatey(10px);
+    transition-duration: 0.1s;
+    transition-timing-function:ease-out;
+    display: block;
+} 
