add hover effect to the langugages

--- a/index.css
+++ b/index.css
@@ -93,6 +93,10 @@ a.navbar-brand{
     text-decoration: none;
 }
 
+.languages a:hover, a:focus{
+    color: snow;
+}
+
 .languages ul{
     display: flex;
 }
