--- a/index.css
+++ b/index.css
@@ -25,6 +25,10 @@ body{
     opacity: 0.75;
 }
 
+.navbar-dark{
+    color: snow !important;
+}
+
 .navbar{
     padding: 20px 50px !important;
     margin-top: 8px;
@@ -38,6 +42,11 @@ a.navbar-brand{
 .navbar-nav
 .nav-link{
     color: rgb(248, 248, 248);
+}
+
+.nav-link:hover, .nav-link:focus{
+    text-decoration: underline;
+    color: snow !important;
 }
 
 .navbar-nav{
@@ -67,17 +76,21 @@ a.navbar-brand{
     font-size: 58px;
 }
 
+.last{
+    align-items: flex-end;
+    display: flex;
+    padding: 0;
+}
 
 .footer{
     display: flex;
-    /* flex-wrap: wrap; */
+    flex-wrap: nowrap; 
     justify-content: space-between;
-    align-items:flex-end;
-    padding: 13px 20px;
-    margin-right:5px;
+    padding: 15px 20px;
     padding-right: 50px;
-    align-items: flex-end;
     height: auto;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.65);
 }
 
 .footer ul{
