--- a/index.css
+++ b/index.css
@@ -5,24 +5,23 @@ body{
     font-family: Poppins,sans-serif;
     font-size: 16px;
     color: #ffffff;
-    background-color: rgba(0, 0, 0, 0.4) !important;
 }
-
-
 
 .vertical_boxes{
     display: grid;
     height: 100vh;
     max-height: 100%;
     background-image: url(imgs/home_Image.jpg);
+    background-color: rgba(0, 0, 0, 0.2) !important;
     background-position: center;
     background-size: cover;
     align-items: stretch;
+    background-blend-mode: overlay;
 }
 
 .bg-dark{
-    background-image: linear-gradient(black 0%, #1a1a1a 40%);
-    opacity: 0.75;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), #1a1a1a 50%);
+    opacity: 0.65;
 }
 
 .navbar-dark{
@@ -31,7 +30,6 @@ body{
 
 .navbar{
     padding: 20px 50px !important;
-    margin-top: 8px;
 }
 
 a.navbar-brand{
