--- a/index.css
+++ b/index.css
@@ -51,7 +51,6 @@ a.navbar-brand{
     /* text-decoration: underline; */
     color: #0a58ca !important;
     z-index: 1;
-
     transition-property: transform;
     transform: translatex(2px);
     transition-duration: 0.1s;
@@ -275,25 +274,195 @@ progress{
     border-radius: 2px !important;
 }
 
+.portfolio{
+    background-image: url(./imgs/portfolio.jpg);
+    color: white;
+    object-fit:contain;
+}
+
 .image-gallery{
     display: grid;
     grid-gap: 40px;
     grid-template-columns: repeat(auto-fit, minmax(320px,1fr));
     max-width: 1280px;
     width: 100%;
-    margin: 100px auto;
+    margin: 50px auto;
     margin-bottom: 60px;
+    /* background: black; */
 }
 
-.image-gallery img{
+.image-gallery img, .blog-grid img{
     width: 100%;
     cursor: pointer;
+    height: 50vh;
+    padding: 10px;
 }
 
 .image-gallery img:hover{
     transform: scale(0.9) rotate(-8deg);
     border-radius: 20px;
     box-shadow: 0 32px 7px rgba(68, 77, 136, 0.2);
+}
+
+.full-img{
+    width: 100%;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    left: 0;
+    top: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+}
+
+.full-img img{
+    width: 90%;
+    max-width: 500px;
+}
+
+.full-img span{
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    font-size: 30px;
+    color: snow;
+    cursor: pointer;
+}
+
+.tile{
+    background-color: rgba(67, 74, 72, 0.5);
+    font-size: 25px;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    padding: 20px;
+    padding-bottom: 20px;
+    border-radius: 15px;
+  }
+
+  .tile a{
+    margin: 0;
+    padding: 20px;
+    text-decoration: none;
+    color: white;
+  }
+
+  .tile a:hover{
+    color: #0a58ca !important;
+    transition-property: transform;
+    transform: translatey(10px);
+    transition-duration: 0.1s;
+    transition-timing-function:ease-out;
+  }
+
+  .blog-sec{
+      background-image: url(./imgs/blog.jpg);
+      object-fit: cover;
+      /* background-color: rgba(0, 0, 0, 0.5);
+      background-blend-mode: overlay; */
+  }
+
+  .blog-grid{
+    display: grid;
+    grid-gap: 40px;
+    grid-template-columns: repeat(auto-fit, minmax(320px,1fr));
+    max-width: 1280px;
+    width: 100%;
+    margin: 50px auto;
+    margin-bottom: 60px;
+  }
+
+.blog-grid a:hover{
+    color: white !important;
+}
+
+.blog-grid a{
+    font-weight: 600;
+}
+
+.blog-grid .tile{
+    background-color: rgba(67, 74, 72, 0.7) !important;
+}
+
+  .tile p{
+      font-size: 15px;
+      font-weight: 400;
+  }
+
+  .readmore{
+      color: rgb(2, 175, 68);
+  }
+
+  .readmore:hover{
+      text-decoration: underline;
+  }
+
+  .contact{
+      background-image: url(./imgs/contact.jpg);
+      background-color: rgba(0, 0, 0, 0.6);
+      background-blend-mode: overlay;
+      color: white;
+      object-fit: fill;
+      padding-bottom: 30px;
+  }
+
+  .message{
+      padding-left: 40px;
+      padding-bottom: 20px;
+  }
+
+.contact-name  input, textarea{
+    width: 100%;
+    padding: 5px;
+    margin:0 0 20px 0;
+    background-color: #161616;
+    color: rgb(196, 196, 196);
+    box-shadow: none;
+}
+
+.name{
+    padding-left: 0 !important;
+}
+
+.email{
+    padding-right: 0 !important;
+}
+
+.info ul li{
+    list-style: none;
+}
+
+.info-des{
+    display: flex;
+    /* justify-content: flex-start; */
+    
+}
+
+.info-name{
+    border-left: 2px solid green;
+    margin-bottom: 3px;
+}
+
+.info-name1{
+    border-left: 2px solid green;
+    margin-bottom: 8px;
+}
+
+.info-name p{
+    margin-left: 10px;
+    color: rgb(170, 169, 169);
+}
+
+.contact-des{
+    font-weight: bold;
+    color: white !important;
+    font-size: 18px;
+}
+
+.info-des i{
+    width: 10%;
 }
 
 /* Footer*/
@@ -312,7 +481,7 @@ progress{
     padding-right: 50px;
     height: auto;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 .footer ul{
@@ -367,3 +536,10 @@ progress{
     transition-timing-function:ease-out;
     display: block;
 } 
+
+/* @media screen and (min-width:992px) {
+    .vertical_boxes{
+        height: 105.5vh;
+        width : 104.8%;
+    }
+} */
