--- a/index.css
+++ b/index.css
@@ -68,6 +68,7 @@ a.navbar-brand{
     padding: 3px;
     border-radius: 25%;
     border: 2px solid rgb(6, 63, 250);
+    background-color: rgb(255, 255, 255);
 }
 
 /* Content */
