--- a/index.css
+++ b/index.css
@@ -414,6 +414,10 @@ progress{
       padding-bottom: 20px;
   }
 
+  .contact-p{
+    padding: 20px !important;
+  }
+
 .contact-name  input, textarea{
     width: 100%;
     padding: 5px;
@@ -465,6 +469,7 @@ progress{
 .info-des i{
     width: 10%;
 }
+
 
 /* Footer*/
 .last{
